force-app/main/default/objects/Opportunity/fields/Accepted_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Meeting</label>
    <type>Checkbox</type>
</CustomField>