force-app/main/default/objects/Opportunity/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>Annual Recurring Revenue</description>
    <inlineHelpText>Value of the annual renewal.</inlineHelpText>
    <label>ARR</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>