force-app/main/default/objects/Opportunity/fields/AWS_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>AWS_Marketplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AWS Marketplace</label>
    <type>Checkbox</type>
</CustomField>