force-app/main/default/objects/Opportunity/fields/AWS_Registered_in_ACE__c.field-meta.xml
<CustomField>
    <fullName>AWS_Registered_in_ACE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AWS Reg @ ACE</label>
    <type>Checkbox</type>
</CustomField>