force-app/main/default/objects/Opportunity/fields/Azure_Notified__c.field-meta.xml
<CustomField>
    <fullName>Azure_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSFT Notified</label>
    <type>Checkbox</type>
</CustomField>