force-app/main/default/objects/Opportunity/fields/Backups_moved_to_Role__c.field-meta.xml
<CustomField>
    <fullName>Backups_moved_to_Role__c</fullName>
    <label># Backups_moved_to_Role</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>