force-app/main/default/objects/Opportunity/fields/Bundled__c.field-meta.xml
<CustomField>
    <fullName>Bundled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundled?</label>
    <type>Checkbox</type>
</CustomField>