force-app/main/default/objects/Opportunity/fields/Bundled_Renewal_record__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Renewal_record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundled Renewal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Child Renewals</relationshipLabel>
    <relationshipName>Child_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>