force-app/main/default/objects/Opportunity/fields/Category_Source__c.field-meta.xml
<CustomField>
    <fullName>Category_Source__c</fullName>
    <formula>CASE(LeadSource , 
&quot;Events&quot;,&quot;Marketing&quot;,
&quot;Organic Search&quot;,&quot;Marketing&quot;,
&quot;Paid Social&quot;,&quot;Marketing&quot;,
&quot;Partners&quot;,&quot;Partner&quot;,
&quot;Referrals&quot;,&quot;Other&quot;,
&quot;Third Party Vendors&quot;,&quot;Marketing&quot;,
&quot;Content&quot;,&quot;Marketing&quot;,
&quot;Contact Us / Demo Request&quot;,&quot;Marketing&quot;,
&quot;Existing Customer&quot;,&quot;SDR/Sales&quot;,
&quot;SDR-Outreach&quot;,&quot;SDR/Sales&quot;,
&quot;Lantern&quot;,&quot;Other&quot;,
&quot;AE Outreach+Unassigned&quot;,&quot;SDR/Sales&quot;,
&quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category_Source</label>
    <type>Text</type>
</CustomField>