force-app/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <inlineHelpText>Someone in the buying organization who has a vested interest in your success and acts on your behalf within their organization. A powerful &amp; influential person, who is favorable to your solution.</inlineHelpText>
    <label>Champion</label>
    <type>TextArea</type>
</CustomField>