force-app/main/default/objects/Opportunity/fields/Champion_Score__c.field-meta.xml
<CustomField>
    <fullName>Champion_Score__c</fullName>
    <label>Champion Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>