force-app/main/default/objects/Opportunity/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <formula>CASE(LeadSource,
  &quot;SDR-Outreach&quot;, &quot;AEs and SDRs&quot;,
  &quot;SDROutreach&quot;, &quot;AEs and SDRs&quot;,
  &quot;SDR Outeach&quot;, &quot;AEs and SDRs&quot;,
  &quot;Sales Outeach&quot;, &quot;AEs and SDRs&quot;,
  &quot;Sales and SDR Outreach&quot;, &quot;AEs and SDRs&quot;,
  &quot;Referral from SDR Outreach&quot;, &quot;AEs and SDRs&quot;,
  &quot;SDR &amp; Sales Outreach&quot;, &quot;AEs and SDRs&quot;,
  &quot;SDR Oureach&quot;, &quot;AEs and SDRs&quot;,
  &quot;SDR&quot;, &quot;AEs and SDRs&quot;,
  &quot;SR Outreach&quot;, &quot;AEs and SDRs&quot;,
  &quot;DR Outreach&quot;, &quot;AEs and SDRs&quot;,
  &quot;SDR Ourtreach&quot;, &quot;AEs and SDRs&quot;,
  &quot;SDD Outreach&quot;, &quot;AEs and SDRs&quot;,
  &quot;Sherdah Moca&quot;, &quot;AEs and SDRs&quot;,
  &quot;SDR Outreach&quot;, &quot;AEs and SDRs&quot;,
  &quot;SD Outreach&quot;, &quot;AEs and SDRs&quot;,
  &quot;-&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Direct&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Events&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Organic Search&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Organic Social&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Paid Social&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Paid Ads&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Partner Deal Reg&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Purchased List&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Third Party Vendors&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Content&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;LinkedIn&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Contact Us / Demo Request&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Lantern&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Advertisement&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Email&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Zoominfo&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;SFDC-DM|Opsera Salesforce and MultiCloud&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Tradeshow&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;SFDC-dup-DM|Opsera Salesforce and MultiCl&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Spigital - AWS-Reinvent-22&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Webinar&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;SDR and Sales Outreach&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Demo Request&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;SDR Outrech&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Hubspot&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Free-Trial - GitCustodian&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Event&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Not a lead&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;SFBen-Feb23&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Evnts&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;AzureMarketplace-PLT|Opsera_oct21&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Marketing&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;SDR Outrach&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;DG-ABM-Copado&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;clearconnect&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;MQL&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;List Data (Raw)&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;List&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Lead Forensics&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Walnut Demo&quot;, &quot;Mktg Demand Gen&quot;,
  &quot;Other&quot;, &quot;Other&quot;,
  &quot;Referrals&quot;, &quot;Partner Program&quot;,
  &quot;Referral from prospect&quot;, &quot;Partner Program&quot;,
  &quot;Referral - Hemant Garg&quot;, &quot;Partner Program&quot;,
  &quot;Referral&quot;, &quot;Partner Program&quot;,
  &quot;Other&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>