force-app/main/default/objects/Opportunity/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <formula>if(ispickval( Primary_Product__c ,&quot;Copilot&quot;),
        &quot;GitHub&quot;,
        if(
                or(
                        find(&quot;github&quot;, lower(Name))   &gt;0,
                        find(&quot;git-hub&quot;, lower(Name))  &gt;0,
                        find(&quot;git hub&quot;, lower(Name))  &gt;0,
                        find(&quot;copilot&quot;, lower(Name))  &gt;0,
                        find(&quot;co-pilot&quot;, lower(Name)) &gt;0,
                        find(&quot;copilot&quot;, lower(Name))  &gt;0 ) ,
                &quot;GitHub&quot;,
                &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel-Partner</label>
    <type>Text</type>
</CustomField>