force-app/main/default/objects/Opportunity/fields/Check_In_Task_Sent__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Task_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field used by the Scheduled Flow to track whether a 30-day check-in task has been created for this Closed Won opportunity. Prevents duplicate task creation.</description>
    <label>Check In Task Sent</label>
    <type>Checkbox</type>
</CustomField>