force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disqualified (Early Stage)</fullName>
            </value>
            <value>
                <fullName>Product features</fullName>
            </value>
            <value>
                <fullName>Build its own solution</fullName>
            </value>
            <value>
                <fullName>Do nothing/Not enough value</fullName>
            </value>
            <value>
                <fullName>Keep current solution</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>