force-app/main/default/objects/Opportunity/fields/ClosedLost_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>ClosedLost_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ClosedLost Notification Sent</label>
    <type>Checkbox</type>
</CustomField>