force-app/main/default/objects/Opportunity/fields/Cloud_Provi__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provi__c</fullName>
    <label>Cloud Provider: Secondary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cloud_Providers</valueSetName>
    </valueSet>
</CustomField>