force-app/main/default/objects/Opportunity/fields/Cloud_Provider_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provider_Notes__c</fullName>
    <label>Cloud Provider: Notes</label>
    <type>TextArea</type>
</CustomField>