force-app/main/default/objects/Opportunity/fields/Cloud_Provider_Stratetegic__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provider_Stratetegic__c</fullName>
    <label>Cloud Provider: Stratetegic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cloud_Providers</valueSetName>
    </valueSet>
</CustomField>