force-app/main/default/objects/Opportunity/fields/Co_sell_Type__c.field-meta.xml
<CustomField>
    <fullName>Co_sell_Type__c</fullName>
    <description>Co-sell Type for Microsoft Partner Center referral. For &apos;IP Co-sell&apos;, please add at least one solution before synchronizing 
 the opportunity.</description>
    <inlineHelpText>Co-sell Type field for Microsoft Partner Center referral. Cannot be updated once saved. For &apos;IP Co-sell&apos;, please add at least one solution before synchronizing the opportunity.</inlineHelpText>
    <label>Co-sell Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IP Co-sell</fullName>
                <default>true</default>
                <label>IP Co-sell</label>
            </value>
            <value>
                <fullName>Services Co-sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>