force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build Your Own</fullName>
            </value>
            <value>
                <fullName>AutoRabit</fullName>
            </value>
            <value>
                <fullName>Flosum</fullName>
            </value>
            <value>
                <fullName>Copado</fullName>
            </value>
            <value>
                <fullName>Gitlab</fullName>
            </value>
            <value>
                <fullName>Azure DevOps</fullName>
            </value>
            <value>
                <fullName>Atlassian</fullName>
            </value>
            <value>
                <fullName>Harness</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>DX</fullName>
            </value>
            <value>
                <fullName>Gearset</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>