force-app/main/default/objects/Opportunity/fields/Competitor_others__c.field-meta.xml
<CustomField>
    <fullName>Competitor_others__c</fullName>
    <label>Competitor(others)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>