force-app/main/default/objects/Opportunity/fields/Connected_with_Client_c__c.field-meta.xml
<CustomField>
    <fullName>Connected_with_Client_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connected with Client</label>
    <type>Checkbox</type>
</CustomField>