force-app/main/default/objects/Opportunity/fields/Contacts_added_Backups__c.field-meta.xml
<CustomField>
    <fullName>Contacts_added_Backups__c</fullName>
    <label># Contacts added Backups</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>