force-app/main/default/objects/Opportunity/fields/Contacts_with_Roles__c.field-meta.xml
<CustomField>
    <fullName>Contacts_with_Roles__c</fullName>
    <label># Contacts with Roles</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>