force-app/main/default/objects/Opportunity/fields/Contract_End_Date_formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_formula__c</fullName>
    <formula>IF(
    ISBLANK(Contract_Start_Date__c) || ISBLANK(Contract_Term__c),
    NULL,
    ADDMONTHS(Contract_Start_Date__c, Contract_Term__c) -1
)</formula>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>