force-app/main/default/objects/Opportunity/fields/Contract_Metric_Information__c.field-meta.xml
<CustomField>
    <fullName>Contract_Metric_Information__c</fullName>
    <label>Contract Metric Information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>