force-app/main/default/objects/Opportunity/fields/Contract_Start_Ext__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Ext__c</fullName>
    <formula>if( isblank(Contract_Start_Date__c),  CloseDate , Contract_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Start - Ext</label>
    <type>Date</type>
</CustomField>