force-app/main/default/objects/Opportunity/fields/Customer_found_us_here__c.field-meta.xml
<CustomField>
    <fullName>Customer_found_us_here__c</fullName>
    <label>Customer found us here</label>
    <length>255</length>
    <type>Text</type>
</CustomField>