force-app/main/default/objects/Opportunity/fields/Customer_Meets_Minimal_Install_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Customer_Meets_Minimal_Install_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Meets Minimal Install Criteria</label>
    <type>Checkbox</type>
</CustomField>