force-app/main/default/objects/Opportunity/fields/Customer_purchase_intent__c.field-meta.xml
<CustomField>
    <fullName>Customer_purchase_intent__c</fullName>
    <inlineHelpText>Specify customer&apos;s intent to transact on Microsoft marketplace.</inlineHelpText>
    <label>Customer purchase intent</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Co_sell_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>HaveNotDecided</fullName>
                <label>Have not decided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>