force-app/main/default/objects/Opportunity/fields/DataBricks_AE_Email__c.field-meta.xml
<CustomField>
    <fullName>DataBricks_AE_Email__c</fullName>
    <label>DataBricks AE Email</label>
    <type>Email</type>
</CustomField>