force-app/main/default/objects/Opportunity/fields/Date_at_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_at_Closed__c</fullName>
    <description>Date moved to Closed</description>
    <label>Date at Closed</label>
    <type>Date</type>
</CustomField>