force-app/main/default/objects/Opportunity/fields/Date_at_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Date_at_Discovery__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Date opportunity moved to Discovery</description>
    <label>Date at Discovery</label>
    <type>Date</type>
</CustomField>