force-app/main/default/objects/Opportunity/fields/Date_at_Meeting_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Date_at_Meeting_Scheduled__c</fullName>
    <description>Date opportunity was moved to meeting scheduled</description>
    <label>Date at Meeting Scheduled</label>
    <type>Date</type>
</CustomField>