force-app/main/default/objects/Opportunity/fields/Date_at_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Date_at_Negotiation__c</fullName>
    <description>Date opportunity moved to Negotiation</description>
    <label>Date at Negotiation</label>
    <type>Date</type>
</CustomField>