force-app/main/default/objects/Opportunity/fields/Date_at_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Date_at_Proposal__c</fullName>
    <description>Date opportunity moved to Proposal Stage</description>
    <label>Date at Proposal</label>
    <type>Date</type>
</CustomField>