force-app/main/default/objects/Opportunity/fields/Date_at_Sales_Accepted_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Date_at_Sales_Accepted_Rejected__c</fullName>
    <description>Date moved to Sales Accepted or Rejected</description>
    <label>Date at Sales Accepted/Rejected</label>
    <type>Date</type>
</CustomField>