force-app/main/default/objects/Opportunity/fields/Date_at_Signed_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_at_Signed_Contract_Received__c</fullName>
    <description>Date opportunity moved to Signed Contract Received</description>
    <label>Date at Signed Contract Received</label>
    <type>Date</type>
</CustomField>