force-app/main/default/objects/Opportunity/fields/Date_at_Solution_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Date_at_Solution_Alignment__c</fullName>
    <description>Date opportunity moved to Solution Alignment</description>
    <label>Date at Solution Alignment</label>
    <type>Date</type>
</CustomField>