force-app/main/default/objects/Opportunity/fields/Date_at_Solution_Validation__c.field-meta.xml
<CustomField>
    <fullName>Date_at_Solution_Validation__c</fullName>
    <description>Date opportunity moved to Solution Validation</description>
    <label>Date at Solution Validation</label>
    <type>Date</type>
</CustomField>