force-app/main/default/objects/Opportunity/fields/Date_Pipeline_Forecastable__c.field-meta.xml
<CustomField>
    <fullName>Date_Pipeline_Forecastable__c</fullName>
    <label>Date Pipeline / Forecastable</label>
    <type>Date</type>
</CustomField>