force-app/main/default/objects/Opportunity/fields/Date_Stage_01__c.field-meta.xml
<CustomField>
    <fullName>Date_Stage_01__c</fullName>
    <label>Date_Stage_01</label>
    <type>Date</type>
</CustomField>