force-app/main/default/objects/Opportunity/fields/Date_Stage_02__c.field-meta.xml
<CustomField>
    <fullName>Date_Stage_02__c</fullName>
    <label>Date_Stage_02</label>
    <type>Date</type>
</CustomField>