force-app/main/default/objects/Opportunity/fields/Date_Stage_03__c.field-meta.xml
<CustomField>
    <fullName>Date_Stage_03__c</fullName>
    <label>Date_Stage_03</label>
    <type>Date</type>
</CustomField>