force-app/main/default/objects/Opportunity/fields/Days_Stage_01_02__c.field-meta.xml
<CustomField>
    <fullName>Days_Stage_01_02__c</fullName>
    <formula>if(not(isblank(Date_Stage_02__c)),
if(and(Date_Stage_01__c  &lt;= Date_Stage_02__c, not(isblank(Date_Stage_02__c))), Date_Stage_02__c - Date_Stage_01__c, 0),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Stage 01-02</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>