force-app/main/default/objects/Opportunity/fields/Days_Stage_04_05__c.field-meta.xml
<CustomField>
    <fullName>Days_Stage_04_05__c</fullName>
    <formula>if(not(isblank(Date_Stage_05__c)),
if(and(Date_Stage_04__c &lt;= Date_Stage_05__c, not(isblank(Date_Stage_04__c))), Date_Stage_05__c - Date_Stage_04__c, 0),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Stage 04-05</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>