force-app/main/default/objects/Opportunity/fields/Deal_Blockers_First_Identified_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Blockers_First_Identified_Date__c</fullName>
    <label>Deal Blockers First Identified Date</label>
    <type>Date</type>
</CustomField>