force-app/main/default/objects/Opportunity/fields/Deal_Reg_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Notes__c</fullName>
    <label>GitHub AE Notes</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>