force-app/main/default/objects/Opportunity/fields/Deal_Reg_Referring_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Referring_Rep_Email__c</fullName>
    <label>GitHub AE Email</label>
    <type>Email</type>
</CustomField>