force-app/main/default/objects/Opportunity/fields/Deal_Reg_Referring_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Referring_Rep_Phone__c</fullName>
    <label>GitHub AE Phone</label>
    <type>Phone</type>
</CustomField>