force-app/main/default/objects/Opportunity/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <inlineHelpText>The criteria the company uses to make the decision to purchase your solution. What is the criteria used by the company to make the purchasing decision and choose among the various options.</inlineHelpText>
    <label>Decision Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>