force-app/main/default/objects/Opportunity/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <inlineHelpText>The process the company uses to make the decision. The process defined by the company to reach the purchase decision.</inlineHelpText>
    <label>Decision Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>