force-app/main/default/objects/Opportunity/fields/EB_Meeting_Occured__c.field-meta.xml
<CustomField>
    <fullName>EB_Meeting_Occured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EB Meeting Occured</label>
    <type>Checkbox</type>
</CustomField>