force-app/main/default/objects/Opportunity/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <inlineHelpText>The company’s economic buyer. The person who actually has the authority to make the decision and release the budget. The person who has decision control on the funds for the purchase.</inlineHelpText>
    <label>Economic Buyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>