force-app/main/default/objects/Opportunity/fields/Exec_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Exec_Sponsors__c</fullName>
    <label>Exec Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exec_Sponsors</valueSetName>
    </valueSet>
</CustomField>