force-app/main/default/objects/Opportunity/fields/First_Meeting_Date_Held__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Date_Held__c</fullName>
    <label>First Meeting Date Held</label>
    <type>Date</type>
</CustomField>