force-app/main/default/objects/Opportunity/fields/Focus_Account__c.field-meta.xml
<CustomField>
    <fullName>Focus_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is an account of high priority to be reviewed by Founders and Functional Leads.</inlineHelpText>
    <label>Focus Account</label>
    <type>Checkbox</type>
</CustomField>