force-app/main/default/objects/Opportunity/fields/GitHub_Reg_Deal__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Reg_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GitHub Registered Deal</label>
    <type>Checkbox</type>
</CustomField>