force-app/main/default/objects/Opportunity/fields/GitHub_SPIF_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>GitHub_SPIF_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GitHub SPIF Opportunity</label>
    <type>Checkbox</type>
</CustomField>