force-app/main/default/objects/Opportunity/fields/Google_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Google_Marketplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Google Marketplace</label>
    <type>Checkbox</type>
</CustomField>