force-app/main/default/objects/Opportunity/fields/How_can_Microsoft_help__c.field-meta.xml
<CustomField>
    <fullName>How_can_Microsoft_help__c</fullName>
    <description>How can Microsoft help?</description>
    <inlineHelpText>How can Microsoft help? Select help option to create a co-sell deal otherwise if no help is required from Microsoft do not select any option.</inlineHelpText>
    <label>How can Microsoft help?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workload Specific Value Proposition</fullName>
            </value>
            <value>
                <fullName>Customer Technical Architecture</fullName>
            </value>
            <value>
                <fullName>Proof Of Concept or Demo</fullName>
            </value>
            <value>
                <fullName>Quotes or Licensing</fullName>
            </value>
            <value>
                <fullName>Post Sales Customer Success</fullName>
            </value>
            <value>
                <fullName>General or Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>