force-app/main/default/objects/Opportunity/fields/Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain__c</fullName>
    <inlineHelpText>Actual pains that the company would require your solution to relieve. A customer must have a need or a pain before they pursue a solution.</inlineHelpText>
    <label>Identify Pain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>